Bug squashing
Contributions dump you back to person page
Changed pointer on show datetime select
Took out a bunch of code that validated that tickets had been created before publishing a show.  We no longer enforce that.

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -248,3 +248,6 @@ span.help
   font-size: 14px
   padding: 4px
   @include rounded-corners(6px, 6px, 6px, 6px)
+  
+#show_datetime
+  cursor: pointer
